Added websocket API jar for framework, Jetty websocket jars for embedded war only; basic code to get WebSocket ServerContainer in MoquiContextListener, though does nothing but log it for now